# VetInventory

./: .gitignore  .taurignore  README.md  package-lock.json  package.json
src/: App.jsx  styles.css
src-tauri/: Cargo.toml  sqlite.db  tauri.conf.json
src-tauri/database/: sqlite.db
src-tauri/migrations/: 20240526093825_create_tables.sql  20240627074200_create_tables.sql  20240627074358_inserts.sql  20240627104608_create_tables.sql  20240628012031_create_tables.sql  20240628012042_inserts.sql  20240702093943_create_tables.sql  20240703115020_create_tables.sql  20240703115039_inserts.sql
src-tauri/src/: database.rs  handlers.rs  main.rs  models.rs  repository.rs
src-tauri/src/handlers/: login.rs  product_manager.rs
src-tauri/src/models/: category.rs  product.rs  role.rs  supplier.rs  user.rs  user_role.rs
src-tauri/src/repository/: category_repository.rs  product_repository.rs  supplier_repository.rs  user_repository.rs
src/assets/: michi.jfif
src/components/AdminPanel/: Categorias.jsx  Panel.css  Panel.jsx  Productos.jsx  Proveedores.jsx
src/components/Login/Loading/: Loading.css  Loading.jsx
src/components/Login/LoginSignup/: LoginSignup.css  LoginSignup.jsx
src/components/Login/LogoutLoading/: LogoutLoading.css  LogoutLoading.jsx
src/components/LoginSignup/: Loading.css  Loading.jsx  LoginSignup.css  LoginSignup.jsx  LogoutLoading.css  LogoutLoading.jsx
src/components/Panel/: Categorias.jsx  Panel.css  Panel.jsx  Productos.jsx  Proveedores.jsx
src/components/RegisterProduct/: ProductEntry.jsx
src/hooks/: useActions.js  useProductActions.js
(+16 files in other folders)
