[package]
name = "vetinventory"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenv = "0.15.0"
#sqlx = { version = "0.7.4", features = ["sqlite"] }
sqlx = { version = "0.7.4", features = [ "runtime-tokio", "tls-native-tls", "sqlite", "macros" ] }
#tokio = { version = "1.20.0", features = ["macros"] }
#diesel = { version = "2.1.6", features = ["sqlite"] }
#rusqlite = { version = "0.31.0", features = ["bundled"] }
#libsqlite3-sys = { version = "^0", features = ["bundled"] }
#[dev-dependencies]
#diesel_migrations = "2.1.0"

#[dependencies.tauri-plugin-sql]
#git = "https://github.com/tauri-apps/plugins-workspace"
#branch = "v1"
#features = ["sqlite"] # or "postgres", or "mysql"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
